map-app/app.js,map-app/styles/style.css - avoid inline styles
Move these flex styles into the stylesheet.

Also, prevent them from shrinking. This could be another contribution
to the iOS/Safari layout problem we are trying to address.

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -378,6 +378,9 @@ body {
 .sea-initiatives-list-sidebar-content {
   height: 100%;
 }
+.sea-main-sidebar-inner {
+  flex: 1 0 auto;
+}
 
 .sea-initiative-non-geo {
   color: gray;
